Updates authe requirements in openapi spec
