# keystone_api/apps/authentication/views.py
@@ -26,6 +26,7 @@ class LoginView(GenericAPIView):
     serializer_class = LoginSerializer
 
     @extend_schema(
+        auth=[],
         summary="Authenticate a user and start a new session",
         description="Validate the provided credentials and start a new user session.",
         tags=["Authentication"],
